--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-click==6.7
-Flask==0.12.2
+Flask==0.11.1
+Jinja2==2.8
+MarkupSafe==0.23
+Werkzeug==0.11.11
+click==6.6
+gunicorn==19.6.0
 itsdangerous==0.24
-Jinja2==2.9.6
-MarkupSafe==1.0
-Werkzeug==0.12.2
+wsgiref==0.1.2
