--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,20 @@
-Flask==0.11.1
-Jinja2==2.8
-MarkupSafe==0.23
-Werkzeug==0.11.11
 click==6.6
+flake8==3.3.0
+Flask==0.11.1
 gunicorn==19.6.0
 itsdangerous==0.24
+Jinja2==2.8
+MarkupSafe==0.23
+mccabe==0.6.1
+mock==2.0.0
+pbr==3.1.1
+pep8-naming==0.4.1
+pikalang==0.1.1
+ply==3.10
+pycodestyle==2.3.1
+pydocstyle==2.0.0
+pyflakes==1.5.0
+selenium==3.5.0
+six==1.10.0
+snowballstemmer==1.2.1
+Werkzeug==0.11.11
